[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade"
version = "1.0.0"
description = "Automated network attack orchestrator for Raspberry Pi — recon, harvest, crack, lateral movement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0",
    "requests>=2.28",
]

[project.scripts]
cascade = "cascade.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cascade*"]
