[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade"
version = "1.0.0"
description = "Network attack toolkit — Attack mode for Pi, Crack mode for Windows GPU machine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0",
    "requests>=2.28",
]

[project.scripts]
cascade = "cascade.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cascade*", "cascade_cracker*"]
