[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-cracker"
version = "1.0.0"
description = "GPU hash cracker companion for Cascade — pulls from Pi, cracks, pushes results back"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0",
]

[project.scripts]
cascade-crack  = "cascade_cracker.cracker:main"
cascade-doctor = "cascade_cracker.doctor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cascade_cracker*"]
